[gd_scene load_steps=2 format=3 uid="uid://bqtybkf8avgkn"]

[ext_resource type="Script" path="res://king_of_diamonds.gd" id="1_unp7c"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="NumInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 440.0
offset_right = 644.0
offset_bottom = 494.0

[node name="SendNumb" type="Button" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 557.0
offset_right = 642.0
offset_bottom = 601.0
text = "Send"
script = ExtResource("1_unp7c")

[node name="PlayerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 63.0
offset_top = 30.0
offset_right = 181.0
offset_bottom = 65.0
text = "Player"

[node name="ScorePlayer" type="Label" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 70.0
offset_right = 146.0
offset_bottom = 114.0

[node name="CNPlayer" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 128.0
offset_right = 139.0
offset_bottom = 174.0

[node name="NPC1" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 23.0
offset_right = 394.0
offset_bottom = 77.0
text = "NPC1"

[node name="ScoreNPC1" type="Label" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 81.0
offset_right = 386.0
offset_bottom = 128.0

[node name="CNNPC1" type="Label" parent="."]
layout_mode = 0
offset_left = 291.0
offset_top = 150.0
offset_right = 393.0
offset_bottom = 206.0

[node name="NPC2" type="Label" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 30.0
offset_right = 609.0
offset_bottom = 84.0
text = "NPC2"

[node name="ScoreNPC2" type="Label" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 88.0
offset_right = 601.0
offset_bottom = 135.0

[node name="CNNPC2" type="Label" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 157.0
offset_right = 608.0
offset_bottom = 213.0

[node name="NPC3" type="Label" parent="."]
layout_mode = 0
offset_left = 719.0
offset_top = 28.0
offset_right = 833.0
offset_bottom = 82.0
text = "NPC3"

[node name="ScoreNPC3" type="Label" parent="."]
layout_mode = 0
offset_left = 719.0
offset_top = 86.0
offset_right = 825.0
offset_bottom = 133.0

[node name="CNNPC3" type="Label" parent="."]
layout_mode = 0
offset_left = 730.0
offset_top = 155.0
offset_right = 832.0
offset_bottom = 211.0

[node name="Average" type="Label" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 498.0
offset_right = 187.0
offset_bottom = 555.0
